Added canada mapto ch1

--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -34,7 +34,7 @@ By the end of the chapter, readers will be able to do the following:
 ## Canadian languages data set
 
 In this chapter, \index{Canadian languages} we will walk through a full analysis of a data set relating to
-languages spoken at home by Canadian residents. Many Indigenous peoples exist in Canada
+languages spoken at home by Canadian residents (Figure \@ref(fig:canada-map)). Many Indigenous peoples exist in Canada
 with their own cultures and languages; these languages are often unique to Canada and not spoken
 anywhere else in the world [@statcan2018mothertongue]. Sadly, colonization has
 led to the loss of many of these languages. For instance, generations of
@@ -49,6 +49,10 @@ Canada" [@walker2017],
 peoples, and Residential Schools* [@children2012]
 and the *Truth and Reconciliation Commission of Canada's*
 *Calls to Action* [@calls2015].
+
+```{r canada-map, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Map of Canada.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/intro/canada_map.png")
+```
 
 The data set we will study in this chapter is taken from
 [the `canlang` R data package](https://ttimbers.github.io/canlang/)
