intro bugs from py issue

--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -89,7 +89,7 @@ tongues in Canada, and how many people speak each of them?*
 Every good data analysis begins with a *question*&mdash;like the
 above&mdash;that you aim to answer using data. As it turns out, there
 are actually a number of different *types* of question regarding data:
-descriptive, exploratory, inferential, predictive, causal, and mechanistic,
+descriptive, exploratory, predictive, inferential, causal, and mechanistic,
 all of which are defined in Table \@ref(tab:questions-table).
 Carefully formulating a question as early as possible in your analysis&mdash;and
 correctly identifying which type of question it is&mdash;will guide your overall approach to
@@ -174,10 +174,12 @@ Since we are using R for data analysis in this book, the first step for us is to
 load the data into R. When we load tabular data into
 R, it is represented as a *data frame* object\index{data frame!overview}. Figure
 \@ref(fig:img-spreadsheet-vs-dataframe) shows that an R data frame is very similar
-to a spreadsheet. We refer to the rows as \index{observation} **observations**; these are the things that we
-collect the data on, e.g., voters, cities, etc. We refer to the columns as \index{variable}
-**variables**; these are the characteristics of those observations, e.g., voters' political
-affiliations, cities' populations, etc.
+to a spreadsheet. We refer to the rows as \index{observation} **observations**;
+these are the individual objects
+for which we collect data. In Figure \@ref(fig:img-spreadsheet-vs-dataframe), the observations are
+languages. We refer to the columns as **variables**; these are the characteristics of each
+observation. In Figure \@ref(fig:img-spreadsheet-vs-dataframe), the variables are the the
+language's category, its name, the number of mother tongue speakers, etc.
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "A spreadsheet versus a data frame in R.", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/intro/spreadsheet_vs_dataframe.png")
