ch3 bug hunt from py issue

--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -310,7 +310,7 @@ when we need to make the data frame longer and narrower.
 To learn how to use `pivot_longer`, we will work through an example with the
 `region_lang_top5_cities_wide.csv` data set. This data set contains the
 counts of how many Canadians cited each language as their mother tongue for five
-major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton) from
+major Canadian cities (Toronto, Montréal, Vancouver, Calgary, and Edmonton) from
 the 2016 Canadian census.  \index{Canadian languages}
 To get started,
 we will load the `tidyverse` package and use `read_csv` to load the (untidy) data.
@@ -326,7 +326,7 @@ What is wrong with the untidy format above?
 The table on the left in Figure \@ref(fig:img-pivot-longer-with-table)
 represents the data in the "wide" (messy) format.
 From a data analysis perspective, this format is not ideal because the values of
-the variable *region* (Toronto, Montréal, Vancouver, Calgary and Edmonton)
+the variable *region* (Toronto, Montréal, Vancouver, Calgary, and Edmonton)
 are stored as column names. Thus they
 are not easily accessible to the data analysis functions we will apply
 to our data set. Additionally, the *mother tongue* variable values are
@@ -428,7 +428,7 @@ we will work through an example
 with the `region_lang_top5_cities_long.csv` data set.
 This data set contains the number of Canadians reporting
 the primary language at home and work for five
-major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton).
+major cities (Toronto, Montréal, Vancouver, Calgary, and Edmonton).
 
 ``` {r 02-reading-long, warning=FALSE, message=FALSE, R.options = list(width = 90)}
 lang_long <- read_csv("data/region_lang_top5_cities_long.csv")
@@ -496,7 +496,7 @@ more columns, and we would see the data set "widen."
 
 Data are also not considered tidy when multiple values are stored in the same \index{separate}
 cell. The data set we show below is even messier than the ones we dealt with
-above: the `Toronto`, `Montréal`, `Vancouver`, `Calgary` and `Edmonton` columns
+above: the `Toronto`, `Montréal`, `Vancouver`, `Calgary`, and `Edmonton` columns
 contain the number of Canadians reporting their primary language at home and
 work in one column separated by the delimiter (`/`). The column names are the \index{delimiter}
 values of a variable, *and* each value does not have its own cell! To turn this
