bug hunt ch4 py issue

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -210,8 +210,7 @@ records the atmospheric concentration of carbon dioxide
 (CO$_{\text{2}}$, in parts per million)
 at the Mauna Loa research station in \index{Mauna Loa} Hawaii
 from 1959 onward [@maunadata].
-For this book, we are going to focus on the last 40 years of the data set,
-1980-2020.
+For this book, we are going to focus on the years 1980-2020.
 
 **Question:** \index{question!visualization}
 Does the concentration of atmospheric CO$_{\text{2}}$ change over time,
@@ -587,7 +586,7 @@ the values 1, 10, 100, and 1000 are all the same distance apart!
 So we see that applying this function is moving big values closer together
 and moving small values farther apart.
 Note that if your data can take the value 0, logarithmic scaling may not
-be appropriate (since `log10(0) = -Inf` in R). There are other ways to transform
+be appropriate (since `log10(0)` is `-Inf` in R). There are other ways to transform
 the data in such a case, but these are beyond the scope of the book.
 
 We can accomplish logarithmic scaling in a `ggplot` visualization
