ch13 bug hunt py issue

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -63,7 +63,7 @@ a pre-built *container* that comes with precisely the right versions of
 all software packages needed run the worksheets that come with this book.
 \index{Docker}\index{container}
 
-> **Note:** A *container* is a virtualized user space within your computer.
+> **Note:** A *container* is a virtual user space within your computer.
 > Within the container, you can run software in isolation without interfering with the
 > other software that already exists on your machine. In this book, we use
 > a container to run a specific version of the R programming
