bug hunt r issue chapter 2

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -352,8 +352,8 @@ Non-Official & Non-Aboriginal languages Arabic  419890  223535  5585    629055
 
 To read this into R using the `read_delim` function, we specify the path
 to the file as the first argument, provide
-the tab character `"\t"` as the `delim` argument \index{read function!delim argument},
-and set the `col_names` argument to `FALSE` to denote that there are no column names
+the tab character `"\t"` as the `delim` argument,
+and set \index{read function!delim argument} the `col_names` argument to `FALSE` to denote that there are no column names
 provided in the data. Note that the `read_csv`, `read_tsv`, and `read_delim` functions
 all have a `col_names` argument \index{read function!col\_names argument} with
 the default value `TRUE`.
