minor bug hunt vsn ctl py issue

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -55,7 +55,7 @@ ready for the intended audience.
 Without deliberate and conscious effort towards tracking changes
 made to the analysis, projects tend to become messy.
 This mess can have serious, negative repercussions on an analysis project,
-including interesting results files that your code cannot reproduce,
+including results that your code cannot reproduce,
 temporary files with snippets of ideas that are forgotten or
 not easy to find, mind-boggling file names that make it unclear which is
 the current working version of the file (e.g., `document_final_draft_final.txt`,
