minor ed to fix figure description vsn ctl graphic update

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -155,8 +155,8 @@ a version of the project.  These records are \index{git!commit} called **commits
 are a snapshot of the file contents as well
 metadata about the repository at that time the record was created (who made the
 commit, when it was made, etc.). In the local and remote repositories shown in
-Figure \@ref(fig:vc1-no-changes), there are two commits represented as gray
-circles.  Each commit can be identified by a
+Figure \@ref(fig:vc1-no-changes), there are two commits represented as light blue
+rectangles inside the "Repository History" sections.  Each commit can be identified by a
 human-readable **message**, which you write when you make a commit, and a
 **commit hash** that Git automatically adds for you.
 
