cls1 bug hunt py issue wordsmith

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1175,8 +1175,8 @@ rare_plot + geom_point(aes(x = new_point[1], y = new_point[2]),
 ```
 
 Figure \@ref(fig:05-upsample-2) shows what happens if we set the background color of
-each area of the plot to the predictions the K-nearest neighbors
-classifier would make. We can see that the decision is
+each area of the plot to the prediction the K-nearest neighbors
+classifier would make for a new observation at that location. We can see that the decision is
 always "benign," corresponding to the blue color.
 
 ```{r 05-upsample-2, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Imbalanced data with background color indicating the decision of the classifier and the points represent the labeled data."}
