minor fix bughunt reg1 py issue

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -107,7 +107,7 @@ is that we are now predicting numerical variables instead of categorical variabl
 
 > **Note:** You can usually tell whether a\index{categorical variable}\index{numerical variable} variable is numerical or
 > categorical&mdash;and therefore whether you need to perform regression or
-> classification&mdash;by taking two response variables X and Y from your data,
+> classification&mdash;by taking the response variable for two observations X and Y from your data,
 > and asking the question, "is response variable X *more* than response
 > variable Y?" If the variable is categorical, the question will make no sense.
 > (Is blue more than red?  Is benign more than malignant?) If the variable is
