better 10.1 fig caption py bug hunt

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -83,7 +83,7 @@ In general, the process of using a sample to make a conclusion about the
 broader population from which it is taken is referred to as **statistical inference**.
 \index{inference}\index{statistical inference|see{inference}}
 
-```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Population versus sample.", out.width="100%"}
+```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "The process of using a sample from a broader population to obtain a point estimate of a population parameter. In this case, a sample of 10 individuals yielded 6 who own an iPhone, resulting in an estimated population proportion of 60% iPhone owners. The actual population proportion in this example illustration is 53.8%.", out.width="100%"}
 knitr::include_graphics("img/inference/population_vs_sample.png")
 ```
 
