typo fix py bug hunt

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -443,7 +443,7 @@ sampling_distribution_40
 In Figure \@ref(fig:11-example-means4), the sampling distribution of the mean
 has one peak and is \index{sampling distribution!shape} bell-shaped. Most of the estimates are between
 about  \$`r round(quantile(sample_estimates$mean_price)[2], -1)` and
-\$`r round(quantile(sample_estimates$mean_price)[4], -1)`; but there are
+\$`r round(quantile(sample_estimates$mean_price)[4], -1)`; but there is
 a good fraction of cases outside this range (i.e., where the point estimate was
 not close to the population parameter). So it does indeed look like we were
 quite lucky when we estimated the population mean with only
