typo fix bug hunt inf py issue

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -843,8 +843,8 @@ boot20000
 tail(boot20000)
 ```
 
-Let's take a look at histograms of the first six replicates of our bootstrap samples.
-```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, fig.pos = "H", out.extra="", message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Histograms of first six replicates of bootstrap samples."}
+Let's take a look at the histograms of the first six replicates of our bootstrap samples.
+```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, fig.pos = "H", out.extra="", message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Histograms of the first six replicates of the bootstrap samples."}
 six_bootstrap_samples <- boot20000 |>
   filter(replicate <= 6)
 
