period in formula py bug hunt

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -139,7 +139,7 @@ it classified 3 malignant observations as benign, and 4 benign observations as
 malignant. The accuracy of this classifier is roughly
 89%, given by the formula
 
-$$\mathrm{accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}} = \frac{1+57}{1+57+4+3} = 0.892$$
+$$\mathrm{accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}} = \frac{1+57}{1+57+4+3} = 0.892.$$
 
 But we can also see that the classifier only identified 1 out of 4 total malignant
 tumors; in other words, it misclassified 75% of the malignant cases present in the
