minor update cls2 rnd nums py bug hunt

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -278,11 +278,11 @@ obtain a different sequence of random numbers.
 
 ```{r}
 set.seed(4235)
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers1_different <- sample(0:9, 10, replace=TRUE)
+random_numbers1_different
 
-random_numbers <- sample(0:9, 10, replace=TRUE)
-random_numbers
+random_numbers2_different <- sample(0:9, 10, replace=TRUE)
+random_numbers2_different
 ```
 
 In other words, even though the sequences of numbers that R is generating *look*
