minor axis label fix cls2 py bug hunt

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -1422,7 +1422,7 @@ this evidence; if we fix the number of neighbors to $K=3$, the accuracy falls of
 plt_irrelevant_nghbrs <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=nghbrs)) +
               labs(x = "Number of Irrelevant Predictors",
-                   y = "Number of neighbors") +
+                   y = "Tuned number of neighbors") +
   theme(text = element_text(size = 18), axis.title=element_text(size=18))
 
 plt_irrelevant_nghbrs
