intro bug hunt r

--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -237,7 +237,7 @@ library(tidyverse)
 ```
 
 > **Note:** You may have noticed that we got some extra
-> output from R saying `Attaching packages` and `Conflicts` below our code
+> output from R regarding attached packages and conflicts below our code
 > line. These are examples of *messages* in R, which give the user more
 > information that might be handy to know. The `Attaching packages` message is
 > natural when loading `tidyverse`, since `tidyverse` actually automatically
@@ -452,7 +452,7 @@ selected_lang <- select(aboriginal_lang, language, mother_tongue)
 selected_lang
 ```
 
-## Using `arrange` to order and `slice` to select rows by index number
+## Using `arrange` to order and `slice` to select rows by index number {#arrangesliceintro}
 
 We have used `filter` and `select` to obtain a table with only the Aboriginal
 languages in the data set and their associated counts. However, we want to know
@@ -500,7 +500,7 @@ counts... But perhaps, seeing these numbers, we became curious about the
 *percentage* of the population of Canada associated with each count. It is
 common to come up with new data analysis questions in the process of answering
 a first one&mdash;so fear not and explore! To answer this small
-question-along-the-way, we need to divide each count in the `mother_tongue`
+question along the way, we need to divide each count in the `mother_tongue`
 column by the total Canadian population according to the 2016
 census&mdash;i.e., 35,151,728&mdash;and multiply it by 100. We can perform
 this computation using the `mutate` function. We pass the `ten_lang`
@@ -523,7 +523,7 @@ as a mother tongue by between 0.008% and 0.18% of the Canadian population.
 
 ## Exploring data with visualizations
 
-We have now answered our initial question by generating the `ten_lang` table!
+The `ten_lang` table we generated in Section \@ref(arrangesliceintro) answers our initial data analysis question.
 Are we done? Well, not quite; tables are almost never the best way to present
 the result of your analysis to your audience. Even the `ten_lang` table with
 only two columns presents some difficulty: for example, you have to scrutinize
