remove broken md syntax link

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -403,8 +403,7 @@ tabs, "Edit new file" and "Preview". Toggling between them lets you enter and
 edit text and view what the text will look like when rendered, respectively
 (Figure \@ref(fig:create-new-file-02)).
 Note that GitHub understands and renders `.md` files \index{markdown} using a
-[markdown syntax](https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf)
-very similar to Jupyter notebooks, so the "Preview" tab is especially helpful
+markdown syntax very similar to Jupyter notebooks, so the "Preview" tab is especially helpful
 for checking markdown code correctness.
 
 ```{r create-new-file-02, fig.align = "center", fig.cap = 'New plain text files require a file name in the text box circled in red, and file content entered in the larger text box (red arrow).', fig.retina = 2, out.width="100%"}
