fix version control ref links

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -941,10 +941,9 @@ and guidance that the worksheets provide will function as intended.
 Now that you've picked up the basics of version control with Git and GitHub,
 you can expand your knowledge through the resources listed below:
 
-- GitHub's [guides website](https://guides.github.com/) and [YouTube
-  channel](https://www.youtube.com/githubguides), and [*Happy Git and GitHub
-  for the useR*](https://happygitwithr.com/) are great resources to take the next steps in
-  learning about Git and GitHub.
+- GitHub's [guides website](https://docs.github.com/) and [*Happy Git and GitHub
+  for the useR*](https://happygitwithr.com/) are great resources for
+  learning more about Git and GitHub.
 - [Good enough practices in scientific
   computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014)
   [@wilson2014best] provides more advice on useful workflows and "good enough"
