title page oer collections

--- a/index.Rmd
+++ b/index.Rmd
@@ -35,9 +35,15 @@ You can read the web version of the book on this site. Click a section in the ta
 on the left side of the page to navigate to it. If you are on a mobile device,
 you may need to open the table of contents first by clicking the menu button on 
 the top left of the page. You can purchase a PDF or print copy of the book 
-on the [CRC Press website](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685) or on [Amazon](https://www.amazon.com/Data-Science-First-Introduction-Chapman/dp/0367532174/ref=sr_[…]qid=1644637450&sprefix=data+science+timber%2Caps%2C166&sr=8-1).
+on the [CRC Press website](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685)
+or on [Amazon](https://www.amazon.com/Data-Science-First-Introduction-Chapman/dp/0367532174/ref=sr_[…]qid=1644637450&sprefix=data+science+timber%2Caps%2C166&sr=8-1).
 
 For the python version of the textbook, visit [https://python.datasciencebook.ca](https://python.datasciencebook.ca).
+
+This book is listed in a number of open educational resource (OER) collections:
+- [The University of British Columbia OER collection](https://oer.open.ubc.ca/data-science-a-first-introduction/)
+- [The OER Commons](https://oercommons.org/courses/data-science-a-first-introduction-with-r)
+- [MERLOT](https://merlot.org/merlot/viewMaterial.htm?id=773420156)
 
 ```{r bookcover, echo = FALSE, fig.retina = 2, out.width = "45%"}
 knitr::include_graphics("img/frontmatter/ds-a-first-intro-cover.jpg")
