shrink amazon link

--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ on the left side of the page to navigate to it. If you are on a mobile device,
 you may need to open the table of contents first by clicking the menu button on 
 the top left of the page. You can purchase a PDF or print copy of the book 
 on the [CRC Press website](https://www.routledge.com/Data-Science-A-First-Introduction/Timbers-Campbell-Lee/p/book/9780367524685)
-or on [Amazon](https://www.amazon.com/Data-Science-First-Introduction-Chapman/dp/0367532174/ref=sr_[…]qid=1644637450&sprefix=data+science+timber%2Caps%2C166&sr=8-1).
+or on [Amazon](https://www.amazon.com/Data-Science-First-Introduction-Chapman/dp/0367532174).
 
 For the python version of the textbook, visit [https://python.datasciencebook.ca](https://python.datasciencebook.ca).
 
