remove binder suggestions from exercises section

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -1170,16 +1170,15 @@ statistical techniques you may learn about in the future!
 
 ## Exercises
 
-Practice exercises for the material covered in this chapter
-can be found in the accompanying
-[worksheets repository](https://worksheets.datasciencebook.ca)
-in the two "Statistical inference" rows.
-You can launch an interactive version of each worksheet in your browser by clicking the "launch binder" button.
-You can also preview a non-interactive version of each worksheet by clicking "view worksheet."
-If you instead decide to download the worksheets and run them on your own machine,
-make sure to follow the instructions for computer setup
-found in Chapter \@ref(setup). This will ensure that the automated feedback
-and guidance that the worksheets provide will function as intended.
+Practice exercises for the material covered in this chapter can be found in the
+accompanying [worksheets repository](https://worksheets.datasciencebook.ca) in
+the two "Statistical inference" rows.  You can preview a
+non-interactive version of each worksheet for this chapter by clicking "view
+worksheet." To work on the exercises interactively, follow the instructions in
+the worksheets repository to download all worksheets, and follow the
+instructions for computer setup found in Chapter \@ref(setup). This will ensure
+that the automated feedback and guidance that the worksheets provide will
+function as intended.
 
 ## Additional resources
 
