--- a/source/preface.Rmd
+++ b/source/preface.Rmd
@@ -42,14 +42,13 @@ knitr::include_graphics("img/frontmatter/chapter_overview.png")
 
 Each chapter in the book has an accompanying worksheet that provides exercises
 to help you practice the concepts you will learn. We strongly recommend that you
-work through the worksheet when you finish reading each chapter 
+work through the worksheet for each chapter 
 before moving on to the next chapter. All of the worksheets
 are available at 
 [https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca);
 the "Exercises" section at the end of each chapter points you to the right worksheet for that chapter.
-For each worksheet, you can either launch an interactive version of the worksheet in your browser by clicking the "launch binder" button,
-or preview a non-interactive version of the worksheet by clicking "view worksheet."
-If you instead decide to download the worksheet and run it on your own machine,
-make sure to follow the instructions for computer setup
+For each worksheet, you can preview a non-interactive version of the worksheet by clicking "view worksheet."
+To work on the exercises interactively, follow the instructions in the worksheets repository
+to download all worksheets, and follow the instructions for computer setup
 found in Chapter \@ref(setup). This will ensure that the automated feedback
 and guidance that the worksheets provide will function as intended.
