--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -40,11 +40,7 @@ By the end of the chapter, readers will be able to do the following:
 
 The worksheets containing exercises for this book
 are online at [https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca).
-The worksheets can be launched directly from that page using the Binder links in the rightmost
-column of the table. This is the easiest way to access the worksheets, but note that you will not
-be able to save your work and return to it again later.
-In order to save your progress, you will need to download the worksheets to your own computer and
-work on them locally. You can download the worksheets as a compressed zip file
+You can download the worksheets as a compressed zip file
 using [the link at the top of the page](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets/archive/refs/heads/main.zip).
 Once you unzip the downloaded file, you will have a folder containing all of the Jupyter notebook worksheets
 accompanying this book. See Chapter \@ref(jupyter) for
