Add line break to adhere to 80 character line limit

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -1233,7 +1233,9 @@ validation accuracy estimate varies only by around `r round(3*sd(100*accuracies$
 each estimate having a standard error around `r round(mean(100*accuracies$std_err), 0)`%.
 Since the cross-validation accuracy estimates the test set accuracy,
 the fact that the test set accuracy also doesn't change much is expected.
-Also note that the $K =$ 3 model had a precision of `r round(100*cancer_prec_1$.estimate, 0)`% and recall of `r round(100*cancer_rec_1$.estimate, 0)`%,
+Also note that the $K =$ 3 model had
+a precision of `r round(100*cancer_prec_1$.estimate, 0)`% and 
+recall of `r round(100*cancer_rec_1$.estimate, 0)`%,
 while the tuned model had
 a precision of `r round(100*cancer_prec_tuned, 0)`% and recall of `r round(100*cancer_rec_tuned, 0)`%.
 Given that the recall decreased&mdash;remember, in this application, recall
